3/product-level-deployment/custom-scripting-with-kustomize-and-oc-apply/deployConfig/mamservices/dev1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mamservices
  namespace: dev1-digital
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
