3/product-level-deployment/custom-scripting-with-kustomize-and-oc-apply/deployConfig/mamservices/dev1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mamservices
  namespace: dev1-digital
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mamservices
    weight: 100
  wildcardPolicy: None
